2009-04-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/playlist/playlist.py:
	Subtract basetime from timestamp when adjusting gnlsources.

2009-04-23  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	Fixed a dependency of python2.5 checking ips.
	Fallback to get always video and audio mime types.

2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Back to dev.

=== release 0.5.4 ===

2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	Releasing 0.5.4 "EAT".

2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/converters/overlay/overlay.py:
	Change the warning text, gst-plugins-good are still buggy.

	* flumotion/component/producers/looper/looper.py:
	Remove warnings about segfault-causing version of gst-python for
	versions that no longer have the buggy behaviour.

2009-04-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker/checks/gst010.py:
	Force using the video pad of dvdemux when cheking firewire
	capabilities in the worker check.
	Fixes #1274

2009-04-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/test_component_playlist.py:
	Fix tests.

2009-04-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/playlist/playlist.py:
	Remove unused imports.
	Set filtercaps on gnlsource.
	Move identity sync=true before identity single-segment=true.
	Hack to expose feeder template.
	* flumotion/component/producers/playlist/playlistparser.py:
	position used is in terms of clock time, not in terms of
	running time
	* flumotion/component/producers/playlist/singledecodebin.py:
	Update to later version.

2009-04-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/bouncer.py: